# gitea-desktop

./: Dockerfile.linux  README.md  index.html  package-lock.json  package.json
scripts/: sign-macos.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  settings.rs
src-tauri/src/commands/: account.rs  branches.rs  git_ops.rs  gitea_proxy.rs  helpers.rs  log.rs  mod.rs  oauth.rs  open_with.rs  ping.rs  repo.rs  settings.rs  submodules.rs
src-tauri/src/config/: mod.rs  store.rs
src-tauri/src/git/: mod.rs  remote.rs  runner.rs  status.rs
src-tauri/src/gitea/: client.rs  mod.rs  models.rs
src-tauri/src/oauth2/: mod.rs  pkce.rs  refresh.rs  server.rs  store.rs
src/api/: commands.ts  dialog.ts  types.ts
src/components/accounts/: AccountSetupDialog.tsx
src/components/branches/: BranchManager.tsx
src/components/changes/: ChangesView.tsx  CommitForm.tsx  DiffViewer.tsx  FileList.tsx
src/components/common/: Button.tsx  ComingSoonDialog.tsx  Dialog.tsx
src/components/history/: CommitDetail.tsx  HistoryView.tsx
src/components/layout/: BranchPicker.tsx  Content.tsx  DialogHost.tsx  OpenWithMenu.tsx  Sidebar.tsx  SyncButtons.tsx  TabBar.tsx  Toolbar.tsx
src/components/pulls/: CreatePullDialog.tsx  PullList.tsx
src/components/repos/: AddLocalRepoDialog.tsx  (+1 more)
src/hooks/: useBranches.ts  useGitStatus.ts  usePulls.ts  useRepoRemote.ts
src/lib/: cn.ts  diff.ts  format.ts
src/store/: accounts.ts  repos.ts  ui.ts
(+2 files in other folders)
